技术路线整理

--- a/doc/Git/操作命令及引用场景.md
+++ b/doc/Git/操作命令及引用场景.md
@@ -1,6 +1,7 @@
-#  1.  Git基本操作命令
+#  1.  操作命令及引用场景
 
-## 1.1 下载代码
+## 常用命令
+
 github代码下载到本地。
 
 	git clone https://github.com/huzhengxing/spring-cloud-demo.git
