--- a/doc/Git/操作命令及引用场景.md
+++ b/doc/Git/操作命令及引用场景.md
@@ -1,57 +1,216 @@
 #  1.  操作命令及引用场景
 
-## 常用命令
+**操作指令介绍**
 
-github代码下载到本地。
+```shell
+usage: git [--version] [--help] [-C <path>] [-c <name>=<value>]
+           [--exec-path[=<path>]] [--html-path] [--man-path] [--info-path]
+           [-p | --paginate | -P | --no-pager] [--no-replace-objects] [--bare]
+           [--git-dir=<path>] [--work-tree=<path>] [--namespace=<name>]
+           <command> [<args>]
 
-	git clone https://github.com/huzhengxing/spring-cloud-demo.git
+These are common Git commands used in various situations:
 
-## 1.2 拉取代码
-远程仓库代码，更新到本地。
+start a working area (see also: git help tutorial)
+   clone      Clone a repository into a new directory
+   init       Create an empty Git repository or reinitialize an existing one
 
-	git pull
+work on the current change (see also: git help everyday)
+   add        Add file contents to the index
+   mv         Move or rename a file, a directory, or a symlink
+   reset      Reset current HEAD to the specified state
+   rm         Remove files from the working tree and from the index
 
+examine the history and state (see also: git help revisions)
+   bisect     Use binary search to find the commit that introduced a bug
+   grep       Print lines matching a pattern
+   log        Show commit logs
+   show       Show various types of objects
+   status     Show the working tree status
 
-## 1.3 上传代码
-本地已经git commit文件上传的远程仓库。(先git pull,再git push)
+grow, mark and tweak your common history
+   branch     List, create, or delete branches
+   checkout   Switch branches or restore working tree files
+   commit     Record changes to the repository
+   diff       Show changes between commits, commit and working tree, etc
+   merge      Join two or more development histories together
+   rebase     Reapply commits on top of another base tip
+   tag        Create, list, delete or verify a tag object signed with GPG
 
-	git push
-
-
-
-## 1.4 提交代码本地
-
-	git commit -m "备注"
-
-
-## 1.5 查看本地提交的代码
-	git status
-
-
-## 1.6 删除本地仓库代码
-已经git commit 的文件
-
-	git rm -r --cached fileName
-
-
-## 1.7  查看分支 
-
-	git branch
-
-## 1.8  创建分支
-
-	git branch branchName
-
-
-
-
-## 1.9  添加远程仓库
-远程已经创建仓库,本地代码同步到远程仓库。
-
-	git remote add origin [远程地址]
+collaborate (see also: git help workflows)
+   fetch      Download objects and refs from another repository
+   pull       Fetch from and integrate with another repository or a local branch
+   push       Update remote refs along with associated objects
+```
 
 
-## 1.10  添加远程分支
-本地代码同步到远程仓库，添加分支，才能提交上传代码。
 
-	 git pull origin master
+
+
+## git clone
+
+> Clone a repository into a new directory
+
+复制一个仓库到新文件夹，如下会在当前目录创建一个spring-cloud-demo文件夹，项目就在这个文件夹下。
+
+```shell
+git clone https://github.com/huzhengxing/technology-stack.git
+```
+
+
+
+应用：
+
+1. 当你想远程仓库代码copy到本地时。
+
+## git init
+
+
+
+> Create an empty Git repository or reinitialize an existing one
+
+初始化创建一个本地空仓库。
+
+```shell
+git init 
+```
+
+应用:
+
+1. 新建好一个文件夹，准备用git来管理。
+2. 本地已经存在项目，需要通过git来管理，需要先`git init`
+
+
+
+## git add
+
+> Add file contents to the index
+
+官方解释是将文件添加到索引,这个是为提交到本地仓库做准备
+
+```shell
+git add <file or dir>
+```
+
+如果想撤回`git add` 的文件则使用,但是这里只能撤销文件，不能是目录
+
+```shell
+git rm --cached <file>
+```
+
+```shell
+albert@MacBook-Pro git-test % git rm --cached src/README.md
+rm 'src/README.md'
+```
+
+
+
+
+
+应用:
+
+1. 一般先会使用`git status`查看当前分支状态，在使用此命令
+
+
+
+
+
+## git status
+
+> git-status - Show the working tree status
+
+展示当前工作树的状态,会显示未提交文件，以及已经被track的文件
+
+```shell
+git status 
+```
+
+
+
+```shell
+albert@MacBook-Pro git-test % git status
+On branch master
+Changes to be committed:
+  (use "git reset HEAD <file>..." to unstage)
+
+	new file:   src/READM.md
+	new file:   src/README.md
+
+Untracked files:
+  (use "git add <file>..." to include in what will be committed)
+
+	READM.md
+```
+
+
+
+
+
+## git diff
+
+> git-diff - Show changes between commits, commit and working tree, etc
+
+查看文件的修改。
+
+```shell
+albert@MacBook-Pro git-test % git diff
+diff --git a/README.md b/README.md
+index 2829ba9..591d92e 100644
+--- a/README.md
++++ b/README.md
+@@ -1 +1,3 @@
+-# git-test
++# git-test 1234
++123123123123123
++
+```
+
+
+
+
+
+## git commit
+
+> git-commit - Record changes to the repository
+
+将`git add ` 到index 的文件提交到本地仓库
+
+
+
+```shell
+albert@MacBook-Pro git-test % git commit src -m "commit test"
+[master 69b2239] commit test
+ 2 files changed, 2 insertions(+)
+ create mode 100644 src/READM.md
+ create mode 100644 src/README.md
+```
+
+
+
+修改`commit -m`内容
+
+```shell
+git commit --amend
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+**参考资料**
+
+- [官方文档](https://git-scm.com/docs)
+- [Git 工作流程](http://www.ruanyifeng.com/blog/2015/12/git-workflow.html)
+- [Git协议规范](https://github.com/thoughtbot/guides/tree/master/protocol/git)
+
+- [命令清单](http://www.ruanyifeng.com/blog/2015/12/git-cheat-sheet.html)
