--- a/doc/Git/操作命令及引用场景.md
+++ b/doc/Git/操作命令及引用场景.md
@@ -1,4 +1,4 @@
-#  1.  操作命令及引用场景
+#  1.  Git操作命令及引用场景
 
 **操作指令介绍**
 
@@ -195,13 +195,86 @@ git commit --amend
 
 
 
+## git config
+
+> git-config - Get and set repository or global options
+
+```shell
+#------全局配置--------
+
+#查看配置
+git config --list --global
+
+# 编辑
+git config -e --global
+
+# 设置全局用户名
+git config --global user.name "name"
+
+# 设置全局邮箱
+git config --global user.email "address"
+
+
+# ------- 项目配置---------
+# 上面的--global去掉
+
+```
 
 
 
+## git stash
+
+> Stash the changes in a dirty working directory away
+
+```shell
+# 查看所有的stash
+git stash list [<options>]
+# 显示某个stash，默认显示最上面一个，后面可以加0，1，2
+git stash show [<options>] [<stash>]
+# 删除某一个stash
+git stash drop [-q|--quiet] [<stash>]
+# 将某个stash放回到工作区，出栈的效果
+git stash ( pop | apply ) [--index] [-q|--quiet] [<stash>]
+# 将stash放到一个新的分支上面
+git stash branch <branchname> [<stash>]
+# 将当前修改放到放到stash中
+git stash [push [-p|--patch] [-k|--[no-]keep-index] [-q|--quiet]
+	     [-u|--include-untracked] [-a|--all] [-m|--message <message>]
+	     [--pathspec-from-file=<file> [--pathspec-file-nul]]
+	     [--] [<pathspec>…]]
+# 清除所有的stash
+git stash clear
+git stash create [<message>]
+git stash store [-m|--message <message>] [-q|--quiet] <commit>
+```
 
 
 
+```shell
+# 将工作区代码放到缓存区
+git stash
 
+# 将缓存区代码返回工作区
+git stash pop
+
+# 
+
+```
+
+应用:
+
+1. 当发现远程代码与本地代码存在冲突，无法`git pull` ，先`git stash`，然后就可以`git pull`,最后通过`git stash pop`将缓存区代码返回到工作区
+
+
+
+## git branch
+
+```shell
+#查看本地分支
+git branch
+
+
+```
 
 
 
