--- a/Git/操作命令及引用场景.md
+++ b/Git/操作命令及引用场景.md
@@ -99,7 +99,7 @@ git rm --cached <file>
 ```
 
 ```shell
-albert@MacBook-Pro git-test % git rm --cached src/README.md
+albert@MacBook-Pro git-test % git rm --cach src/README.md
 rm 'src/README.md'
 ```
 
